加gif和進度軸