@@ -6,12 +6,14 @@
 package lendle.courses.wp.containers;
 
 import java.awt.BorderLayout;
+import java.io.File;
 import java.net.URL;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.ImageIcon;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
+import javax.swing.JProgressBar;
 import javax.swing.JWindow;
 import javax.swing.WindowConstants;
 
@@ -31,11 +33,16 @@ public class SplashScreenSample {
         frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
         //init the JWindow, add component to its content pane
         JWindow window=new JWindow();
-        ImageIcon icon=new ImageIcon(new URL("https://i.ytimg.com/vi/ND6a4V-xdjI/hqdefault.jpg"));
+        File file=new File("giphy.gif");//加gif
+        ImageIcon icon=new ImageIcon(file.toURI().toURL());
         window.setLayout(new BorderLayout());
         window.getContentPane().add(new JLabel(icon));
         window.setSize(500,500);//window大小
         window.setLocationRelativeTo(null);//視窗置中
+        JProgressBar progressBar=new JProgressBar();
+        progressBar.setIndeterminate(true);
+        window.getContentPane().add(progressBar,"South");
+        
         
         
         
